<resources>
    <string name="app_name">Ghi chú</string>
    <string name="my_notes">Ghi chú</string>
    <string name="search_notes">Tìm kiếm</string>
    <string name="note_subtitle">Phụ đề</string>
    <string name="type_note_here">Ghi chú...</string>
    <string name="note_title">Tiêu đề</string>
    <string name="pick_color">Chọn màu</string>
    <string name="miscellanous">Tùy chọn</string>
    <string name="add_image">Thêm ảnh</string>
    <string name="add_url">Thêm url</string>
    <string name="enter_url">Nhập url</string>
    <string name="add">Thêm</string>
    <string name="cancel">Hủy</string>
    <string name="delete_note">Xóa</string>
    <string name="confirm">Bạn có chắc chắn muốn xóa không?</string>
    <string name="touch">Truy cập bằng vân tay</string>
    <string name="touch_to_scan">Vui lòng quét mã vân tay của bạn để truy cập</string>
    <string name="not_valid">Vân tay không hợp lệ</string>
    <string name="desc">Sử dụng dấu vân tay để bảo mật ghi chú của bạn</string>
    <string name="lock">Khóa ghi chú</string>
    <string name="unlock">Mở khóa ghi chú</string>
    <string name="pin">Mã PIN</string>
    <string name="fingerprint">Vân tay</string>
    <string name="choose_lock">Chọn kiểu khóa</string>
</resources>